--- a/utils/config/properties.ini
+++ b/utils/config/properties.ini
@@ -1,6 +1,6 @@
 [app]
 name=ecfastmvc
-env=${ENV} # Environment Variables Interpolation
+env=DEV # Environment Variables Interpolation
 api-docs.path=/docs
 
 [log]
